# parser-regex

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.project  parser-regex.cabal  regex-app.md
.github/workflows/: haskell-ci.yml  mhs-ci.yml
bench/: Bench.hs  Compare.hs  Main.hs  README.md  bench.cabal
bench-data/: 2014_in_video_games.html.data  licenses.txt
compare/: Compare.hs  compare.cabal
script/: GenCaseFold.hs  case.sh  script.cabal
src/Data/: CharSet.hs
src/Regex/: Base.hs  List.hs  Text.hs
src/Regex/Internal/: Array.hs  CharSet.hs  CharSets.hs  Debug.hs  List.hs  Num.hs  Parser.hs  Regex.hs  Solo.hs  Text.hs  Unique.hs
test/: Test.hs
