cabal-version:      2.4
name:               parser-regex
version:            0.2.0.1
synopsis:           Regex based parsers
homepage:           https://github.com/meooow25/parser-regex
bug-reports:        https://github.com/meooow25/parser-regex/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             Soumik Sarkar
maintainer:         soumiksarkar.3120@gmail.com
category:           Parsing
build-type:         Simple
extra-doc-files:
    README.md
    CHANGELOG.md

description:
    Regex based parsers. See
    .
    ["Regex.Text"]: To work with @Text@ from the @text@ library.
    .
    ["Regex.List"]: To work with @String@s or lists.
    .
    ["Regex.Base"]: To work with other sequences.

tested-with:
    GHC == 9.0.2
  , GHC == 9.2.8
  , GHC == 9.4.8
  , GHC == 9.6.6
  , GHC == 9.8.4
  , GHC == 9.10.1
  , GHC == 9.12.1

source-repository head
    type:     git
    location: https://github.com/meooow25/parser-regex.git

common warnings
    ghc-options:
        -Wall -Wcompat -Widentities -Wredundant-constraints -Wunused-packages

library
    import:           warnings

    exposed-modules:
        Data.CharSet
        Regex.Base
        Regex.List
        Regex.Text
        Regex.Internal.CharSet
        Regex.Internal.Debug
        Regex.Internal.Parser
        Regex.Internal.Regex
        Regex.Internal.Text
        Regex.Internal.Unique

    other-modules:
        Regex.Internal.CharSets
        Regex.Internal.Generated.CaseFold
        Regex.Internal.List
        Regex.Internal.Num

    build-depends:
        base >= 4.15 && < 5.0
      , containers >= 0.6.4 && < 0.9
      , deepseq >= 1.4.5 && < 1.6
      , text >= 2.0.1 && < 2.2
      , transformers >= 0.5.6 && < 0.7

    hs-source-dirs:   src
    default-language: Haskell2010

    other-extensions:
        BangPatterns
        CPP
        GADTs
        RankNTypes
        ScopedTypeVariables

    if impl(ghc)
        build-depends:
            ghc-bignum >= 1.1 && < 1.4
          , primitive >= 0.7.3 && < 0.10

test-suite test
    import:           warnings

    build-depends:
        base
      , parser-regex
      , QuickCheck >= 2.14.3 && < 2.16
      , quickcheck-classes-base >= 0.6.2 && < 0.7
      , tasty >= 1.5 && < 1.6
      , tasty-hunit >= 0.10.1 && < 0.11
      , tasty-quickcheck >= 0.10.3 && < 0.12
      , text

    hs-source-dirs:   test
    main-is:          Test.hs
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
