cabal-version:      2.4
name:               compare
version:            0.1.0.0

common warnings
    ghc-options: -Wall

benchmark compare
    import: warnings

    build-depends:
        base
      , array
      , deepseq
      , tasty
      , tasty-bench
      , tasty-hunit
      , text
      , bytestring

      , parser-regex
      , regex == 1.1.0.2
      , regex-applicative == 0.3.4
      , regex-base
      , regex-pcre-builtin == 0.95.2.3.8.44
      , regex-tdfa == 1.3.2.2
      , regex-with-pcre == 1.1.0.2

    hs-source-dirs: .
    main-is: Compare.hs
    default-language: Haskell2010
    type: exitcode-stdio-1.0
