cabal-version:      2.4
name:               script
version:            0.1.0.0

executable compare
    ghc-options: -Wall

    build-depends:
        base
      , containers
      , parser-regex
      , text

    hs-source-dirs: .
    main-is: GenCaseFold.hs
    default-language: Haskell2010
    type: exitcode-stdio-1.0
